--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,16 @@
 name: dart_plugin_template
 description: A template for creating dart_eval plugins (Dart only)
 version: 0.1.1
+publish_to: none
 
 environment:
   sdk: ^3.0.0
 
 dependencies:
-  dart_eval: ^0.7.9
+  pvpsdk:
+    git:
+      url: https://github.com/pathverse-ext/pvpsdk.git
+      path: pvpsdk
 
 dev_dependencies:
   lints: ^2.0.0
